# paris-appart-mlops

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.claude/agents/: ml-paris-appart.md
scripts/: download_dvf.py  ingest_dvf.py  setup_db.py
src/db/: client.py  migrations.py  models.py
src/scraping/: dvf_ingest.py
src/validation/: dvf_clean.py
tests/: conftest.py  test_db.py  test_dvf_clean.py  test_dvf_ingest.py
