[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paris-appart-mlops"
version = "0.1.0"
description = "ML pipeline for predicting Paris apartment prices"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "fastapi",
    "uvicorn",
    "scipy",
    "matplotlib",
    "duckdb",
    "httpx",
    "pydantic",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
